apps/headscale/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headplane
  namespace: halo
  labels:
    app: headplane
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: headplane
